objects/Unit_Test_Summary__c.object
<CustomObject>
    <description>Summary of unit test results</description>
    <fields>
        <fullName>Apex_Code_Coverage__c</fullName>
        <formula>IF(Apex_Total_LOC__c  != 0 ,   Apex_Lines_Covered__c  /   Apex_Total_LOC__c , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total code coverage of all Apex classes and triggers.  75% is needed to pass.</inlineHelpText>
        <label>Apex Code Coverage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apex_Lines_Covered__c</fullName>
        <inlineHelpText>The total number of Apex lines covered</inlineHelpText>
        <label>Apex Lines Covered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apex_Test_Time__c</fullName>
        <inlineHelpText>The time (in seconds) it took to run all apex tests.</inlineHelpText>
        <label>Time (s)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apex_Total_LOC__c</fullName>
        <inlineHelpText>The total number of lines of apex code</inlineHelpText>
        <label>Apex Total Lines of Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates when a test run is finished. Used to trigger email notification workflow.</description>
        <inlineHelpText>Indicates when a test run is finished. Used to trigger email notification workflow.</inlineHelpText>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Details__c</fullName>
        <inlineHelpText>Log field for detailed error messages from testing.</inlineHelpText>
        <label>Error Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Failed_Apex_Tests__c</fullName>
        <inlineHelpText>The total number of failed Apex Test methods.</inlineHelpText>
        <label>Failed Apex Tests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Instance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The instance where the unit tests were run</description>
        <label>Instance</label>
        <referenceTo>Instances__c</referenceTo>
        <relationshipLabel>Unit Test Summaries</relationshipLabel>
        <relationshipName>Unit_Test_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <formula>IF(System_Error__c, &quot;Fail&quot;,
IF(AND(Failed_Apex_Tests__c = 0, Apex_Code_Coverage__c = 0), &quot;Pass&quot;,
IF(AND(Failed_Apex_Tests__c = 0, Apex_Code_Coverage__c &gt;= 0.75), &quot;Pass&quot;, &quot;Fail&quot; )
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The overall test result.  Total Coverage must be 75% or higher and there are no failed test results.</inlineHelpText>
        <label>Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Rate__c</fullName>
        <formula>IF( Total_Apex_Unit_Tests__c  != 0 , (  Total_Apex_Unit_Tests__c  -  Failed_Apex_Tests__c  )  /   Total_Apex_Unit_Tests__c  , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The percentage of passing tests.</inlineHelpText>
        <label>Success Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>System_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Date__c</fullName>
        <inlineHelpText>The test date.</inlineHelpText>
        <label>Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Apex_Unit_Tests__c</fullName>
        <inlineHelpText>The total number of Apex Test methods. .</inlineHelpText>
        <label>Total Apex Unit Tests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Unit Test Summary</label>
    <nameField>
        <displayFormat>UTS-{00000}</displayFormat>
        <label>Unit Test Summary</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Test Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>